сделана форма регистрации Бнадо поправить кнопку зарегестрировать

--- a/cafe/app/templates/home_page.html
+++ b/cafe/app/templates/home_page.html
@@ -22,7 +22,7 @@
             </div>
 
 <div class="btn_registration">
-    <form id="registration_form" action="{% url 'registration' %}">
+    <form id="registration_form" action="{% url 'register' %}">
         <h1 onclick="submitForm()" class="btn_r_txt">Регистрация</h1>
     </form>
 </div>
