--- a/cafe/app/templates/registration.html
+++ b/cafe/app/templates/registration.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 {%load static %}
-
 <head>
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@100;200;300;400&display=swap" rel="stylesheet">
-
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:wght@300;400;500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/registrationsv3.css' %}">
+<!--    <link rel="stylesheet" type="text/css" href="{% static 'css/registrationsv3.css' %}">-->
     <meta charset="UTF-8">
 
     <title>Title</title>
@@ -23,49 +21,52 @@
                 <h1 class="btn_a_txt">Авторизация</h1>
             </div>
 
-        {% endfor %}
-    </div>
-
-
-        <form method="post" id="form_save" class="input_name_booking" action="{% url 'registration_complete' %}">
-    {% csrf_token %}
-        {{ form.as_p }}
-      
-        <h2 class="registration_page_lable">Регистрация</h2>
-        <label class="registration_login_lable">Введите логин:</label>
-        <input class="input_login_registration" required type="text" id="input-login_reg" name="input-login" maxlength=40>
-        <label class="registration_password_lable">Придумайте пароль:</label>
-        <input class="input_password_registration" required type="text" id="input-password_reg" name="input-password" maxlength=40>
-        <label class="registration_password_lable_r">Подтвердите пароль:</label>
-        <input class="input_password_registration_r" required type="text" id="input-password_reg_r" name="input-password_r" maxlength=40>
-        <label class="registration_email_lable">Ваш email:</label>
-        <input class="input_email" required type="email" id="input-email_reg" name="input-email_r" maxlength=40>
-        <input class="booking_btn" type="submit" value="Зарегистрировать">
-        <label class="registration_captcha">Введите изображение с картинки:</label>
-         <div class="container_captcha">
-            <img class="img_captcha" src="/media/captcha.png">
-        </div>
-        <input class="input_captcha" required type="text" id="input-captcha_reg_r" name="input-captcha_r" maxlength=5>
-        <input class="reg_page_btn" type="submit" value="Зарегистрироваться">
-
-
-
+<div class="btn_registration">
+    <form id="registration_form" action="{% url 'register' %}">
+        <h1 onclick="submitForm()" class="btn_r_txt">Регистрация</h1>
     </form>
+</div>
 
+
+    <h2 class="label_registration">Регистрация<h2>
+    <h1 class="label_login">Придумайте логин<h1>
+    <h1 class="label_email">Введите email<h1>
+    <h1 class="label_password">Придумайте пароль<h1>
+    <h1 class="label_password2">Подтвердите пароль<h1>
+    <form method="post">
+      {% csrf_token %}
+      <div class='username'>
+       {{ form.username }}</div>
+      <div>
     
-
-
-
-
-    <form method="post" id="complete_page_btn" class="complete_btn_homepage" action="{% url 'start_page' %}">
-        {% csrf_token %}
-        <input class="booking_btn" type="submit" value="На главную">
+      <div class='email'>
+        {{ form.email }}
+        </div>
+      
+      <div class='password'>
+        {{ form.password1 }}
+        </div>
+    
+      <div class='password2'>
+        {{ form.password2 }}
+        </div>
+    
+      <div class="password_error2">
+        {{ form.password2.errors }}
+        </div>
+      <div class="password_error">
+        {{ form.password2.errors }}
+        </div>
+    
+      <div class="email_error">
+        {{ form.email.errors }} 
+        </div>
+      <div class="username_error">
+        {{ form.username.errors }} 
+        </div>
+      <button type="submit" class="btn_reg">Зарегистрироваться</button>
     </form>
-
-
-
-
-
+    
 
 
 
