сделана адаптивная верстка для главной страницы от 770 px до 1920

--- a/cafe/app/templates/complete.html
+++ b/cafe/app/templates/complete.html
@@ -21,7 +21,7 @@
                 <h1 class="btn_a_txt">Авторизация</h1>
             </div>
             <div class="btn_registration">
-    <form id="registration_form" action="{% url 'registration' %}">
+    <form id="registration_form" action="{% url 'register' %}">
         <h1 onclick="submitForm()" class="btn_r_txt">Регистрация</h1>
     </form>
 </div>
