--- a/cafe/app/templates/home_page.html
+++ b/cafe/app/templates/home_page.html
@@ -7,8 +7,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:wght@300;400;500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-<link rel='stylesheet' href="{% static 'css/homev14.css' %}">
+<link rel='stylesheet' href="{% static 'css/homev15.css' %}">
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
     <title>Title</title>
 </head>
 <body >
