--- a/cafe/app/static/css/homev14.css
+++ b/cafe/app/static/css/homev14.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
 }
-
+/* /////////////////////////////////////////////////HDR///////////////////////////////////// */
 body{
     background: #ffffff;
 }
@@ -112,7 +112,7 @@ body{
 
 
 
-
+/* /////////////////////////////////////////////////FTR/////////////////////////////////// */
 
 
 .footer {
@@ -172,7 +172,7 @@ body{
     top: 16px;
     cursor: pointer;
 }   
-
+/* /////////////////////////////////////////////////////////////////////////// */
 .name_restaurant{
     position:absolute;
     font-size: 20px;
@@ -459,4 +459,295 @@ body{
     padding: 10px;
     gap: 10px;
     cursor: pointer;
+}
+/* /////////////////////////////////////////////1600px////////////////////////// */
+@media (max-width: 1630px){
+    .name_restaurant{
+        position:absolute;
+        font-size: 20px;
+        font-family: 'Roboto', sans-serif;
+        left: 30%;
+        top:16.5%;
+    }
+    
+    .container_restaurant {
+        position: fixed;
+        display: block;
+        height: 420px;
+        width: 297px;
+        left: 30%;
+        top: 20%;
+        overflow:hidden
+    
+    
+    }
+    .container_restaurant .restaurant_photo{
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+        overflow:hidden
+    }
+    .container_restaurant_photo2{
+        position: fixed;
+        display: block;
+        height: 145px;
+        width: 145px;
+        left: 30%;
+        top: 64%;
+        overflow:hidden
+    }
+    
+    .container_restaurant_photo2 .restaurant_photo2{
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+        overflow:hidden
+    }    
+    
+    .container_restaurant_photo3{
+        position: fixed;
+        display: block;
+        height: 145px;
+        width: 145px;
+        left: 38.2%;
+        top: 64%;
+        overflow:hidden
+    }
+    
+    .container_restaurant_photo3 .restaurant_photo3{
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+        overflow:hidden
+    }    
+    .label_name_r{
+        position: absolute;
+        top:16% ;
+        left:30% ;
+        font-family: 'Exo 2', sans-serif;
+    }
+    .rating{
+        position: absolute;
+        font-size: 15px;
+        font-family: 'Exo 2', sans-serif;
+        top:20% ;
+        left:55% ;
+    
+    }
+    .kitchen{
+        position: absolute;
+        font-size: 15px;
+        font-family: 'Exo 2', sans-serif;
+        top:23% ;
+        left:47% ;
+    
+    }
+    .summer_terrace{
+        position: absolute;
+        font-size: 15px;
+        font-family: 'Exo 2', sans-serif;
+        top:26% ;
+        left:47% ;
+    
+    }
+    
+    .parking{
+        position: absolute;
+        font-size: 15px;
+        font-family: 'Exo 2', sans-serif;
+        top:29% ;
+        left:47% ;
+    
+    }
+    .average_check{
+        position: absolute;
+        font-size: 15px;
+        font-family: 'Exo 2', sans-serif;
+        top:32% ;
+        left:47% ;
+    
+    }
+    
+    
+    
+    .about_r .about_h{
+        position: absolute;
+        width: 400px;
+        font-size: 15px;
+        font-family: 'Exo 2', sans-serif;
+        top:35% ;
+        left:47% ;
+    
+    }
+    
+    .about_r .about{
+        position: absolute;
+        width: 400px;
+        font-size: 12px;
+        font-family: 'Exo 2', sans-serif;
+        top:38% ;
+        left:47% ;
+    
+    }
+    
+    .number{
+        position: absolute;
+        font-size: 15px;
+        font-family: 'Exo 2', sans-serif;
+        top:49% ;
+        left:47% ;
+    
+    }
+    
+    .email{
+        position: absolute;
+        font-size: 15px;
+        font-family: 'Exo 2', sans-serif;
+        top:52% ;
+        left:47% ;
+    
+    }
+    .download_m .download_menu{
+        position: absolute;
+        font-size: 14px;
+        font-family: 'Exo 2', sans-serif;
+        top:55% ;
+        left:47% ;
+        color: white;
+        background: #5B5B5B;
+        border-radius: 5px;
+        justify-content: center;
+        align-items: center;
+        padding: 10px;
+        gap: 10px;
+        cursor: pointer;
+    }
+    
+    
+    
+    
+    
+    .booking{
+        position: absolute;
+        font-size: 15px;
+        font-family: 'Exo 2', sans-serif;
+        top:64% ;
+        left:47% ;
+    }
+    
+    
+    .text_name_booking{
+        position: absolute;
+        font-size: 15px;
+        font-family: 'Exo 2', sans-serif;
+        top:68%;
+        left:47% ;
+    }
+    
+    .input_booking{
+        position: absolute;
+        font-size: 15px;
+        font-family: 'Exo 2', sans-serif;
+        top:68%;
+        left:52% ;
+    }
+    
+    .number_booking_text{
+        position: absolute;
+        font-size: 15px;
+        font-family: 'Exo 2', sans-serif;
+        top:71%;
+        left:47% ;
+    }
+    
+    .number_booking{
+        position: absolute;
+        font-size: 15px;
+        font-family: 'Exo 2', sans-serif;
+        top:71%;
+        left:52% ;
+    }
+    
+    .people_booking_text{
+        position: absolute;
+        font-size: 15px;
+        font-family: 'Exo 2', sans-serif;
+        top:71%;
+        left:63% ;
+    }
+    
+    .people_booking{
+        position: absolute;
+        width: 40px;
+        font-size: 15px;
+        font-family: 'Exo 2', sans-serif;
+        top:71%;
+        left:66% ;
+    }
+    
+    .booking_btn{
+        position: absolute;
+        padding-left: 16px;
+        padding-right: 16px;
+        padding-top: 4px;
+        padding-bottom: 4px;
+        border-radius: 4px;
+        border-color: #5B5B5B ;
+        background: #5B5B5B;
+        color: #f5f5f5;
+        font-size: 15px;
+        font-family: 'Exo 2', sans-serif;
+        top:75.5%;
+        left:47% ;
+    }
+    .previous .previous_page{
+        position: absolute;
+        font-size: 14px;
+        font-family: 'Exo 2', sans-serif;
+        top:55% ;
+        left:55% ;
+        color: white;
+        background: #5B5B5B;
+        border-radius: 5px;
+        justify-content: center;
+        align-items: center;
+        padding: 10px;
+        gap: 10px;
+        cursor: pointer;}
+    
+    .next_p .next_page{
+        position: absolute;
+        font-size: 14px;
+        font-family: 'Exo 2', sans-serif;
+        top:85% ;
+        left:58.5% ;
+        color: white;
+        background: #5B5B5B;
+        border-radius: 5px;
+        justify-content: center;
+        align-items: center;
+        padding: 10px;
+        gap: 10px;
+        cursor: pointer;
+    
+    
+    } .download_menu{
+        position: absolute;
+        font-size: 14px;
+        font-family: 'Exo 2', sans-serif;
+        top:55% ;
+        left:47% ;
+        color: white;
+        background: #5B5B5B;
+        border-radius: 5px;
+        justify-content: center;
+        align-items: center;
+        padding: 10px;
+        gap: 10px;
+        cursor: pointer;
+    }
+
 }
