--- a/cafe/app/static/css/setting_userv4.css
+++ b/cafe/app/static/css/setting_userv4.css
@@ -181,3 +181,51 @@ body{
   opacity: 1;
 }
 
+.wrapper{
+    position: fixed;
+    top: 25%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  
+  .wrapper_txt{
+    display: block;
+    font-size: 24px;
+    font-family: sans-serif;
+    text-decoration: none;
+    color: #333;
+    border-top: 2px solid #333;
+    border-bottom: 2px solid #333;
+    padding: 10px;
+    letter-spacing: 2px;
+    transition: all .25s;
+  }
+  
+  .wrapper_txt:hover{
+    letter-spacing: 15px;
+  }
+  
+
+  .wrapper2{
+    position: fixed;
+    top: 35%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  
+  .wrapper_txt2{
+    display: block;
+    font-size: 24px;
+    font-family: sans-serif;
+    text-decoration: none;
+    color: #333;
+    border-top: 2px solid #333;
+    border-bottom: 2px solid #333;
+    padding: 10px;
+    letter-spacing: 2px;
+    transition: all .25s;
+  }
+  
+  .wrapper_txt2:hover{
+    letter-spacing: 15px;
+  }
