--- a/cafe/app/static/css/user_pagev5.css
+++ b/cafe/app/static/css/user_pagev5.css
@@ -382,21 +382,7 @@ body{
     left:66% ;
 }
 
-.booking_btn{
-    position: absolute;
-    padding-left: 16px;
-    padding-right: 16px;
-    padding-top: 4px;
-    padding-bottom: 4px;
-    border-radius: 4px;
-    border-color: #5B5B5B ;
-    background: #5B5B5B;
-    color: #f5f5f5;
-    font-size: 15px;
-    font-family: 'Exo 2', sans-serif;
-    top:75.5%;
-    left:47% ;
-}
+
 .previous .previous_page{
     position: fixed;
     display: block;
@@ -430,19 +416,153 @@ body{
     cursor: pointer;
 
 
-} .download_menu{
-    position: absolute;
-    font-size: 14px;
-    font-family: 'Exo 2', sans-serif;
-    top:55% ;
-    left:47% ;
-    color: white;
-    background: #5B5B5B;
-    border-radius: 5px;
-    justify-content: center;
-    align-items: center;
-    padding: 10px;
-    gap: 10px;
-    cursor: pointer;
-}
+} 
 
+
+  
+
+
+
+
+
+
+
+  .booking_btn {
+    --black: #000000;
+    --ch-black: #141414;
+    --eer-black: #1b1b1b;
+    --night-rider: #fde402;
+    --white: #474747;
+    --af-white: #f3f3f3;
+    --ch-white: #e1e1e1;
+    position: absolute;
+    left: 47%;
+    top: 75%;
+
+    padding: 10px 28px;
+    border-radius: 5px;
+    color: #fafafa;
+    font-weight: 600;
+    font-size: 1rem;
+    letter-spacing: 0px;
+    background-color: var(--eer-black);
+    border: none;
+    overflow: hidden;
+    cursor: pointer;
+    transition: all 0.6s cubic-bezier(0.25, 1, 0.5, 1);
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+    font-family: Montserrat;
+  }
+  
+  .booking_btn .button-text {
+    position: relative;
+    z-index: 2;
+  }
+  
+  .booking_btn .fill-container {
+    position: absolute;
+    left: 0;
+    top: 50%;
+    width: 100%;
+    padding-bottom: 100%;
+    transform: translateY(-50%) rotate(180deg);
+  }
+  
+  .booking_btn .fill-container::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--night-rider);
+    border-radius: 50px;
+    transition: all 0.6s cubic-bezier(0.25, 1, 0.5, 1);
+    transform: translateY(-100%);
+  }
+  
+  .booking_btn:hover {
+    transform: translateY(-4px);
+    color: var(--white);
+  }
+  
+  .booking_btn:hover .fill-container {
+    transform: translateY(-50%) rotate(0);
+  }
+  
+  .booking_btn:hover .fill-container::after {
+    transform: translateY(0);
+  }
+  
+
+  
+
+  .button {
+    --black: #000000;
+    --ch-black: #141414;
+    --eer-black: #1b1b1b;
+    --night-rider: #2e2e2e;
+    --white: #ffffff;
+    --af-white: #f3f3f3;
+    --ch-white: #e1e1e1;
+    position: absolute;
+    left: 47%;
+    top: 58.5%;
+    padding: 12px 18px;
+    border-radius: 5px;
+    color: #ffffff;
+    font-weight: 600;
+    font-size: 1rem;
+    letter-spacing: 0px;
+    background-color: var(--eer-black);
+    border: solid 1px var(--night-rider);
+    overflow: hidden;
+    cursor: pointer;
+    transition: all 0.6s cubic-bezier(0.25, 1, 0.5, 1);
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+    font-family: Montserrat;
+    font-size: 14px;
+    
+  }
+  
+  .button .button-text {
+    position: relative;
+    text-decoration: none;
+    z-index: 2;
+    color: #ffffff;
+  }
+  
+  .button .fill-container {
+    position: absolute;
+    left: 0;
+    top: 50%;
+    width: 100%;
+    padding-bottom: 100%;
+    transform: translateY(-50%) rotate(180deg);
+  }
+  
+  .button .fill-container::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--night-rider);
+    border-radius: 50px;
+    transition: all 0.6s cubic-bezier(0.25, 1, 0.5, 1);
+    transform: translateY(-100%);
+  }
+  
+  .button:hover {
+    transform: translateY(-4px);
+    color: var(--white);
+  }
+  
+  .button:hover .fill-container {
+    transform: translateY(-50%) rotate(0);
+  }
+  
+  .button:hover .fill-container::after {
+    transform: translateY(0);
+  }
