--- a/cafe/app/static/css/profilev6.css
+++ b/cafe/app/static/css/profilev6.css
@@ -278,3 +278,132 @@ body{
     overflow-x: hidden; 
     
   }
+
+
+.name_userbooking{
+    margin-top: 4%;
+    font-size: 14px;
+    font-family: 'Roboto Light 300', sans-serif;
+}
+.number_userbooking{
+    margin-top: 1.5%;
+    font-size: 12px;
+    font-family: 'Roboto Light 300', sans-serif;
+    width: 500px;
+    word-wrap: break-word;
+
+}
+.places_booking{
+    margin-top: 1.5%;
+    font-size: 12px;
+    font-family: 'Roboto Light 300', sans-serif;
+    width: 500px;
+    word-wrap: break-word;
+
+}
+.date_booking{
+    margin-top: 1.5%;
+    font-size: 12px;
+    font-family: 'Roboto Light 300', sans-serif;
+    width: 500px;
+    word-wrap: break-word;
+
+}
+.booking_label{
+    position: absolute;
+    font-size: 20px;
+    font-family: 'Roboto Light 300', sans-serif;
+    right:64.2%;
+    top: 17%;
+}
+.scrollable-container2 {
+    position: absolute;
+    right: 40%;
+    top: 22%;
+    width: 600px;
+    height: 600px;
+    overflow: scroll; /* Используйте auto вместо scroll */
+    overflow-x: hidden; 
+    
+  }
+
+  .btn_new_token{
+    position: absolute;
+    left: 4%;
+    top: 60%;
+  }
+
+
+
+  .btn_new_token{
+    position: absolute;
+    left: 5%;
+    top: 85%;
+  }
+
+  .booking_btn {
+    --black: #000000;
+    --ch-black: #141414;
+    --eer-black: #1b1b1b;
+    --night-rider: #fde402;
+    --white: #474747;
+    --af-white: #f3f3f3;
+    --ch-white: #e1e1e1;
+    position: absolute;
+    left: 47%;
+    top: 75%;
+
+    padding: 10px 28px;
+    border-radius: 5px;
+    color: #fafafa;
+    font-weight: 600;
+    font-size: 1rem;
+    letter-spacing: 0px;
+    background-color: var(--eer-black);
+    border: none;
+    overflow: hidden;
+    cursor: pointer;
+    transition: all 0.6s cubic-bezier(0.25, 1, 0.5, 1);
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+    font-family: Montserrat;
+  }
+  
+  .booking_btn .button-text {
+    position: relative;
+    z-index: 2;
+  }
+  
+  .booking_btn .fill-container {
+    position: absolute;
+    left: 0;
+    top: 50%;
+    width: 100%;
+    padding-bottom: 100%;
+    transform: translateY(-50%) rotate(180deg);
+  }
+  
+  .booking_btn .fill-container::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--night-rider);
+    border-radius: 50px;
+    transition: all 0.6s cubic-bezier(0.25, 1, 0.5, 1);
+    transform: translateY(-100%);
+  }
+  
+  .booking_btn:hover {
+    transform: translateY(-4px);
+    color: var(--white);
+  }
+  
+  .booking_btn:hover .fill-container {
+    transform: translateY(-50%) rotate(0);
+  }
+  
+  .booking_btn:hover .fill-container::after {
+    transform: translateY(0);
+  }
