Добавлена возможность выбора отображения список

--- a/cafe/app/static/css/api_pagev3.css
+++ b/cafe/app/static/css/api_pagev3.css
@@ -295,3 +295,13 @@ body{
     font-family:'Roboto Light 300', sans-serif;
 }
 
+.qr{
+    position: absolute;
+    left: 40%;
+    top: 20%;
+}
+.qr_link{
+    position: absolute;
+    left: 45%;
+    top:57%;
+}
