--- a/cafe/app/templates/edit_restaurant.html
+++ b/cafe/app/templates/edit_restaurant.html
@@ -15,8 +15,8 @@
     <div class="container">
         {% for i in back_img %}
             <img class='headers' src="{{i.header.url}}" >
-            <a href={% url 'start_page' %} >
-                <img class='icoheaders' src="{{i.ico_header.url}}" href={% url 'start_page' %} >
+            <a href={% url 'user_page' %} >
+                <img class='icoheaders' src="{{i.ico_header.url}}" >
                 </a>
             <div class="btn_logout">
                 <a href={% url 'start_page' %} class="btn_logout_txt" style="text-decoration: none;" >Выйти</a>
@@ -113,8 +113,8 @@
         <div class="footer_btn">
             <h1 class="text_footer_dev">Про разработчика</h1>
             <h1 class="text_footer_project"> О проекте</h1>
-            <h1 class="text_footer_telegram">Телеграм Бот</h1>
-            <h1 class="text_footer_api">API</h1>
+            <a class="text_footer_telegram"href={% url 'tg_page' %}>Телеграм Бот</a>
+            <a class="text_footer_api" href={% url 'api_page' %}>API</a>
     {% endfor %}
 </div> 
 </body>
